--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans&display=swap');
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  /* text-align: center; */
+  background-color:#80bdbf;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 2.5em;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cat-walking__white--right {
+  width: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-family: 'Fredoka One', cursive;
+  color: #c9e165;
+  font-size: 2em;
+}
+
+h3 {
+  font-family: 'Open Sans', sans-serif;
+  color: #1d7589;
+  font-size: 0.75em;
 }
