--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -7,7 +7,8 @@
   right: 0;  
   bottom: 0;  
   margin: auto;  
-  background-color: rgba(0,0,0, 0.5);  
+  background-color:#80bdbf;
+  /* background-color: rgba(0,0,0, 0.5);   */
 }  
 .popup\_inner {  
   position: absolute;  
@@ -18,4 +19,11 @@
   margin: auto;  
   border-radius: 20px;  
   background: white;  
+}
+
+.explanation_text {
+  font-family: 'Fredoka One', cursive;
+  color: #c9e165;
+  letter-spacing: 5px;
+  font-size: 1.5em;
 }
