--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -7,8 +7,8 @@
   right: 0;  
   bottom: 0;  
   margin: auto;  
-  background-color:#80bdbf;
-  /* background-color: rgba(0,0,0, 0.5);   */
+  /* background-color:#80bdbf; */
+  background-color: white;  
 }  
 .popup\_inner {  
   position: absolute;  
