--- a/src/components/AnswerExplanationPopup.css
+++ b/src/components/AnswerExplanationPopup.css
@@ -7,8 +7,8 @@
   right: 0;  
   bottom: 0;  
   margin: auto;  
-  /* background-color:#80bdbf; */
-  background-color: white;  
+  background-color:#80bdbf;
+  /* background-color: white;   */
 }  
 .popup\_inner {  
   position: absolute;  
@@ -19,6 +19,8 @@
   margin: auto;  
   border-radius: 20px;  
   background: white;  
+  z-index: 100;
+  position:relative;
 }
 
 .explanation_text {
