--- a/src/components/AnswerExplanationPopup.css
+++ b/src/components/AnswerExplanationPopup.css
@@ -1,5 +1,7 @@
 .popup {  
-  position: fixed;  
+  /* position: fixed;   */
+  position: relative;
+  z-index: 5;
   width: 100%;  
   height: 100%;  
   top: 0;  
@@ -10,6 +12,7 @@
   background-color:#80bdbf;
   /* background-color: white;   */
 }  
+
 .popup\_inner {  
   position: absolute;  
   left: 25%;  
