--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ code {
 
 .container {
   position: relative;
+  z-index: 1;
   max-width: 800px;
   margin: 0 auto;
   background: #fff;
@@ -109,9 +110,9 @@ code {
 
 .radioCustomButton:checked ~ .radioCustomLabel:before {
   content: '';
-  background: #8bc53f no-repeat;
+  /* background: #8bc53f no-repeat; */
   background-size: 27px;
-  border-color: #8bc53f;
+  /* border-color: #8bc53f; */
 }
 
 /* Animation */
