Worked with Kaida to fix the way answer explanation is displayed.

--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@ code {
 } */
 
 .container {
-  position: relative;
-  z-index: 1;
+  /* position: relative; */
+  /* z-index: 1; */
   max-width: 800px;
   margin: 0 auto;
   background: #fff;
