--- a/src/components/AnswerExplanationPopup.css
+++ b/src/components/AnswerExplanationPopup.css
@@ -1,29 +1,28 @@
 .popup {  
   /* position: fixed;   */
-  position: relative;
+  position: fixed;
+  overflow-y: scroll;
   z-index: 5;
-  width: 100%;  
-  height: 100%;  
+  min-height: 100vh;  
   top: 0;  
   left: 0;  
   right: 0;  
-  bottom: 0;  
   margin: auto;  
-  background-color:#80bdbf;
-  /* background-color: white;   */
+  /* background-color:#80bdbf; */
+  background-color: white;  
 }  
 
 .popup\_inner {  
-  position: absolute;  
-  left: 25%;  
+  /* position: fixed;   */
+  /* left: 25%;  
   right: 25%;  
   top: 25%;  
-  bottom: 25%;  
+  bottom: 25%;   */
   margin: auto;  
   border-radius: 20px;  
   background: white;  
   z-index: 100;
-  position:relative;
+  /* position:relative; */
 }
 
 .explanation_text {
