--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,12 @@ code {
   box-sizing: border-box;
 }
 
-/* body {
+body {
   margin: 0;
   padding: 0;
   background: #eee;
   font-family: sans-serif;
-} */
+}
 
 .container {
   /* position: relative; */
