--- a/src/components/AnswerOption.css
+++ b/src/components/AnswerOption.css
@@ -29,7 +29,7 @@
   line-height: 1.5;
 }
 
-.radioCustomButton ~ .radioCustomLabel:before {
+.radioCustomButton ~ .radioCustomLabel::before {
   position: absolute;
   top: 20px;
   left: 38px;
@@ -57,36 +57,4 @@
 
 .answer__item--is-incorrect {
   background-color: #eda6a6; 
-}
-
-/* Animation */
-.fade-enter {
-  opacity: 0;
-}
-
-.fade-enter.fade-enter-active {
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out 0.3s;
-}
-
-.fade-leave {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  opacity: 1;
-}
-
-.fade-leave.fade-leave-active {
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.fade-appear {
-  opacity: 0;
-}
-
-.fade-appear.fade-appear-active {
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
 }
