--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   text-align: center;
 }
 
+.App-body {
+  padding-left: 2em;
+}
+
 h1 {
   font-family: 'Bungee Shade', cursive;
   /* font-family: 'Fredoka One', cursive; */
