--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,14 @@
 
 .App-body {
   padding-left: 2em;
+  padding-right: 2em;
+}
+
+.App-subhead {
+  margin-left: 5em;
+  margin-right: 8em;
+  display: flex;
+  justify-content: space-between;
 }
 
 h1 {
@@ -31,7 +39,7 @@ h1 {
   /* color: #F5640A; */
   color: #c94e02;
   letter-spacing: 5px;
-  font-size: 2em;
+  font-size: 3em;
   margin: 10px;
 }
 
@@ -39,7 +47,7 @@ h3 {
   /* font-family: 'Nunito', sans-serif; */
   font-family: 'Miriam Libre', sans-serif;
   color: #183C4A;
-  font-size: 0.75em;
+  font-size: 1.75em;
   font-weight: 400;
   letter-spacing: 3px;
   margin: 10px;
