--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One|Nunito:200,300,400&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Miriam+Libre&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Baloo|Baloo+Bhai|Bowlby+One|Bowlby+One+SC|Bungee|Bungee+Inline|Concert+One|Fascinate+Inline|Zilla+Slab+Highlight&display=swap');
 
 .App {
   /* text-align: center; */
@@ -15,9 +16,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* font-size: 2.5em; */
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left: 3.5em;
+  margin-right: 2em;
   text-align: center;
 }
 
@@ -33,23 +33,30 @@
   justify-content: space-between;
 }
 
-h1 {
-  font-family: 'Bungee Shade', cursive;
+.App-header h1 {
+  /* font-family: 'Bungee Shade', cursive; */
+  font-family: 'Bowlby One SC', cursive;
+
+
   /* font-family: 'Fredoka One', cursive; */
   /* color: #f7f765; */
   /* color: #F5640A; */
   color: #c94e02;
   letter-spacing: 5px;
-  font-size: 3em;
+  font-size: 3.5em;
   margin: 10px;
 }
 
 h3 {
-  /* font-family: 'Nunito', sans-serif; */
-  font-family: 'Miriam Libre', sans-serif;
+  font-family: 'Nunito', sans-serif;
+  /* font-family: 'Miriam Libre', sans-serif; */
   color: #183C4A;
   font-size: 1.75em;
   font-weight: 400;
   letter-spacing: 3px;
   margin: 10px;
+}
+
+p {
+  font-family: 'Nunito', sans-serif;
 }
