--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -1,3 +1,12 @@
 .questionContainer {
-  display: grid;
+
+}
+
+.quiz {
+  margin-left: 0.8em;
+  margin-right: 0.8em;
+}
+
+.quiz p {
+  font-family: 'Roboto', sans-serif;
 }
