--- a/src/components/AnswerOption.css
+++ b/src/components/AnswerOption.css
@@ -1,8 +1,5 @@
-/* AnswerOption Component */
 
 .answerOptions {
-  /* margin: 0;
-  padding: 0; */
   margin-top: 1em;
   list-style: none;
   width: 100%
@@ -53,7 +50,8 @@
   transition: all 0.3s;
 }
 
-/* highlighting for correct and incorrect answers */.answer__item--is-correct {
+/* highlighting for correct and incorrect answers */
+.answer__item--is-correct {
   background-color: #b2dbaf; 
 }
 
